--- a/baseproject/templates/base.html
+++ b/baseproject/templates/base.html
@@ -89,7 +89,7 @@
                 
             </div>
             {% if request.user.is_authenticated %}
-                <a href="{% url 'appointment:my_appointment'%}" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">My Appointment</a>
+                <!--<a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">My Appointment</a>-->
                 <p> | </p>
                 <a href="{% url 'appointment:appointment'%}" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
                 <a href="{% url 'logout' %}" > Logout</a>
@@ -142,7 +142,7 @@
                     <a class="btn btn-link" href="{% url 'about:about'%}">About Us</a>
                     <a class="btn btn-link" href="{% url 'service:service'%}">Our Services</a>
                     <a class="btn btn-link" href="{% url 'appointment:appointment'%}">Make Appointment</a>
-                    <a class="btn btn-link" href="{% url 'appointment:my_appointment'%}">Our Appointment</a>
+                    <!--<a class="btn btn-link" href="">Our Appointment</a>-->
 
                 </div>
                 <div class="col-lg-3 col-md-6">
